--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
 STATE_FNAME=last-state.json
-EXPECTED_HOSTS_COUNT=2
-LAST_FAILED_THRESHOLD_SEC=30
-LAST_UPD_THRESHOLD_SEC=30
+SAVE_INTERVAL_SEC=60
+EXPECTED_HOSTS_COUNT=3
